# swe-bench-infinite

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  anthropic_client.py  exceptions.py  exp_utils.py  logger.py  main.py  model_utils.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  version_finder.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.env  requirements.txt  requirements_collection.txt
pipeline/: collect.py  localize.py  retry.py  utils.py
prompts/: requirements_collection.txt  requirements_localization.txt  trial_and_error.txt
src/: anthropic_client.py  data_types.py  docker_utils.py  experiment_utils.py  git_utils.py  json_stream_utils.py  logger.py  main.py  model_utils.py  version_finder.py
src/analysis/: even_sample.py
src/data/: __init__.py  even_sample.py
src/pipeline/: __init__.py  build_retry.py  collect.py  eval.py  localize.py  retry.py  test_retry.py
src/prompts/: build_trial_and_error.txt  common.txt  requirements_collection.txt  requirements_localization.txt  test_trial_and_error.txt
src/report/: plot.ipynb
src/report/.ipynb_checkpoints/: plot-checkpoint.ipynb
