[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.isort]
known-first-party = ["model_utils", "exp_utils", "logger"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-bench-infinite"
version = "0.1.0"
description = "SWE Bench Infinite"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "selenium",
    "webdriver-manager",
    "anthropic",
    "bs4",
    "docker",
    "datasets",
    "PyGithub"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pre-commit",
]
